--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -38,29 +38,30 @@ import "../styles/nuevo.css";
     <div
       class="flex flex-col items-center md:items-start p-4 md:p-0 w-full md:w-auto md:text-left text-center"
     >
+      <!-- TEXTO 1 -->
       <div
         id="textos1"
-        class="md:top-0 md:left-0 md:absolute w-full md:w-[560px] md:text-left"
+        class="md:top-0 md:left-0 md:absolute w-full md:w-[560px]"
       >
         <div
           class="md:pl-5 os-animation"
           data-anim="fadeInLeft"
           style="--delay:1s"
         >
-          <span class="font-normal text-[#00ffff] text-[32px] md:text-[52px]">
-            + Smart City.
-          </span>
-          <span class="font-normal text-[32px] text-white md:text-[52px]">
-            Interacción y transformación urbana sostenible
-          </span>
-          <br /><br />
-          <span class="font-light text-white text-lg leading-[150%]">
+        <h2 class="font-normal text-[32px] text-white md:text-[45px] leading-[1.1]">
+          <span class="text-[var(--color-title)]">+ Smart City.</span>
+          Interacción y transformación urbana sostenible
+        </h2>
+        
+
+          <p class="mt-6 font-light text-white text-lg leading-[150%]">
             Un sistema holístico donde interactúan el capital humano y social,
             empleando soluciones basadas en TIC’s.
-          </span>
+          </p>
         </div>
       </div>
 
+      <!-- TEXTO 2 -->
       <div
         id="textos2"
         class="md:top-[770px] md:right-0 md:absolute mt-8 md:mt-0 w-full md:w-[456px] md:text-right"
@@ -70,51 +71,46 @@ import "../styles/nuevo.css";
           data-anim="fadeInLeft"
           style="--delay:1s"
         >
-          <span
-            class="font-semibold text-[#00ffff] text-sm uppercase tracking-[-5px]"
-            >________</span
-          >
-          <span class="font-semibold text-[#00ffff] text-sm uppercase">
-            Smart City</span
-          >
-          <br /><br />
-          <span class="text-[#00ffff] text-3xl"> + </span>
-          <span class="text-white text-3xl">
-            El propósito de una Smart City es alcanzar una gestión eficiente
-          </span>
-          <br />
-          <span class="font-light text-white text-lg leading-[150%]">
+          <p class="font-semibold text-sm uppercase text-[var(--color-title)]">
+            ──────────── Smart City
+          </p>
+
+          <h2 class="mt-4 text-3xl leading-snug">
+            <span class="text-[var(--color-title)]">+</span>
+            <span class="text-white">
+              El propósito de una Smart City es alcanzar una gestión eficiente
+            </span>
+          </h2>
+
+          <p class="mt-2 font-light text-white text-lg leading-[150%]">
             satisfaciendo las necesidades de la ciudad y sus ciudadanos.
-          </span>
+          </p>
         </div>
       </div>
 
+      <!-- TEXTO 3 -->
       <div
         id="textos3"
-        class="md:top-[1300px] md:left-0 md:absolute mt-8 md:mt-0 w-full md:w-[550px] md:text-left"
+        class="md:top-[1300px] md:left-0 md:absolute mt-8 md:mt-0 w-full md:w-[550px]"
       >
         <div
           class="md:pl-5 os-animation"
           data-anim="fadeInLeft"
           style="--delay:1s"
         >
-          <span
-            class="font-semibold text-[#00ffff] text-sm uppercase tracking-[-5px]"
-            >________</span
-          >
-          <span class="font-semibold text-[#00ffff] text-sm uppercase">
-            Smart City</span
-          >
-          <br /><br />
-          <span class="text-white text-3xl">
-            <span class="text-[#00ffff] text-3xl"> + </span>
+          <p class="font-semibold text-sm uppercase text-[var(--color-title)]">
+            ──────────── Smart City
+          </p>
+
+          <h2 class="mt-4 text-white text-3xl leading-snug">
+            <span class="text-[var(--color-title)]">+</span>
             Consultoría y asesoría en gestión de ciudades inteligentes
-          </span>
-          <br />
-          <span class="font-light text-white text-lg leading-[150%]">
+          </h2>
+
+          <p class="mt-2 font-light text-white text-lg leading-[150%]">
             Servicios nacionales e internacionales con enfoque ético,
             sustentable e innovador.
-          </span>
+          </p>
         </div>
       </div>
     </div>
