--- a/src/components/Areas.astro
+++ b/src/components/Areas.astro
@@ -9,8 +9,8 @@ const area1 = item.AREA1 || [];
 const area2 = item.AREA2 || [];
 ---
 
-<section id="areas" class='text-white"'>
-  <div class="bg-[var(--color-blue)] py-8">
+<section id="areas" class="text-white">
+  <div class="bg-[var(--color-title)] py-8">
     <h2 class="px-4 font-bold text-white text-4xl text-center">
       Principales áreas de desarrollo
     </h2>
@@ -18,54 +18,56 @@ const area2 = item.AREA2 || [];
 
   <div class="px-4 py-16">
     <div
-      class="gap-x-16 gap-y-8 grid grid-cols-1 md:grid-cols-2 mx-auto max-w-6xl"
+      class="gap-x-16 gap-y-8 grid grid-cols-1 md:grid-cols-2 mx-auto max-w-6xl md:text-left text-center"
     >
       <div class="flex flex-col gap-8">
         {
           area1.map((area: any, index: number) => (
             <div>
-              <h3 class="mb-2 text-[var(--color-title)] text-2xl font-semibold">
+              <h3 class="mb-2 font-semibold text-[var(--color-title)] text-2xl">
                 {area.TITLE}
               </h3>
-              <p class="text-white text-lg">{area.DESCRIPTION}</p>
+              <p class="text-white text-base lg:text-lg">{area.DESCRIPTION}</p>
               {index < area1.length - 1 && (
-                <p class="my-4 text-[var(--color-title)] text-lg">● ● ●</p>
+                <p class="my-4 text-[var(--color-title)] text-xl">● ● ●</p>
               )}
             </div>
           ))
         }
+
+        <a
+          href="#contact"
+          class="group inline-flex items-center gap-4 hover:bg-[var(--color-title)] my-10 px-6 py-4 border border-[var(--color-title)] rounded-full w-fit font-semibold text-[var(--color-title)] hover:text-black transition-colors"
+        >
+          <span>SOLICITA MÁS INFORMACIÓN</span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="fill-white group-hover:fill-black w-5 h-5 rotate-90 transition-all"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5"
+            ></path>
+          </svg>
+        </a>
       </div>
+
       <div class="flex flex-col gap-8">
         {
           area2.map((area: any, index: number) => (
             <div>
-              <h3 class="mb-2 text-[var(--color-title)] text-2xl font-semibold">
+              <h3 class="mb-2 font-semibold text-[var(--color-title)] text-2xl">
                 {area.TITLE}
               </h3>
-              <p class="text-white text-lg">{area.DESCRIPTION}</p>
+              <p class="text-white text-base lg:text-lg">{area.DESCRIPTION}</p>
               {index < area2.length - 1 && (
-                <p class="my-4 text-[var(--color-title)] text-lg">● ● ●</p>
+                <p class="my-4 text-[var(--color-title)] text-xl">● ● ●</p>
               )}
             </div>
           ))
         }
       </div>
     </div>
-      <a
-        href="#contact"
-        class="inline-flex group mt-8 items-center gap-4 hover:bg-[var(--color-title)] px-6 py-3 border border-[var(--color-title)] rounded-full font-semibold text-[var(--color-title)] hover:text-black transition-colors"
-      >
-        <span>SOLICITA MÁS INFORMACIÓN</span>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="w-5 h-5 rotate-90 fill-white group-hover:fill-black transition-all"
-          viewBox="0 0 16 16"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5"
-          ></path>
-        </svg>
-      </a>
   </div>
 </section>
