--- a/src/components/Areas.astro
+++ b/src/components/Areas.astro
@@ -1,8 +1,8 @@
 ---
-import { useTranslation } from "@/i18n";
+import { getLangFromUrl, useTranslation } from "@/i18n";
 
-const { lang } = Astro.params;
-const t = await useTranslation(lang as any);
+const lang = getLangFromUrl(Astro.url);
+const i18n = await useTranslation(lang);
 const { item } = Astro.props;
 
 const area1 = item.AREA1 || [];
@@ -12,7 +12,7 @@ const area2 = item.AREA2 || [];
 <section id="areas" class="text-white">
   <div class="bg-[var(--color-title)] py-8">
     <h2 class="px-4 font-bold text-white text-4xl text-center">
-      Principales áreas de desarrollo
+      {i18n.AREAS.TITLE}
     </h2>
   </div>
 
@@ -37,9 +37,9 @@ const area2 = item.AREA2 || [];
 
         <a
           href="#contact"
-          class="group inline-flex items-center mx-auto lg:mx-0 gap-4 hover:bg-[var(--color-title)] my-10 px-6 py-4 border border-[var(--color-title)] rounded-full w-fit font-semibold text-[var(--color-title)] hover:text-black transition-colors"
+          class="group inline-flex items-center gap-4 hover:bg-[var(--color-title)] mx-auto lg:mx-0 mt-10 px-6 py-4 border border-[var(--color-title)] rounded-full w-fit font-semibold text-[var(--color-title)] hover:text-black transition-colors"
         >
-          <span>SOLICITA MÁS INFORMACIÓN</span>
+          <span>{i18n.AREAS.BUTTON}</span>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="fill-white group-hover:fill-black w-5 h-5 rotate-90 transition-all"
